[ENV_DEV] fix mobile alignment

--- a/src/styles/fullpage/fullpage.scss
+++ b/src/styles/fullpage/fullpage.scss
@@ -182,6 +182,16 @@ $secondaryColor: #373737;
         display: block;
         padding: 50px 30px;
 
+        &:nth-child(2) {
+          .item-text-wrap {
+            h1, b {
+              width: 100%;
+              padding-left: 0;
+              text-align: left;
+            }
+          }
+        }
+
         .item-text-wrap, .item-image-wrap {
           width: 100%;
 
